feat: Enhance authentication system and unify profile management
Backend:
- Add custom AuthException for better error handling
- Implement GlobalExceptionHandler for consistent error responses
- Update AuthService to use custom exceptions:
  - Email exists validation
  - Invalid credentials handling
  - User not found cases
- Improve error response format with error codes and messages
- Fix CORS configuration in SecurityConfig
- Add JWT token validation and management

Frontend:
- Create unified profile management system:
  - Combine setup and edit flows into single component
  - Add dynamic mode handling (setup vs edit)
  - Pre-populate fields with existing profile data
- Implement custom height selector:
  - Add modal with feet/inches pickers
  - Convert between total inches and feet/inches
  - Match native input styling
- Update error handling:
  - Display backend error messages
  - Add form validation
  - Show loading states
- Streamline navigation:
  - Redirect edit route to unified component
  - Handle back navigation
  - Add proper route protection